# agressive_bg

./: .gitignore  README.md  bg_engine.py  checkpoint.py  config.py  elo.py  env.py  mcts.py  model.py  pyproject.toml  requirements.txt  test.py  trainer.py  ui.py  utils.py  worker.py
checkpoints/: best_model.pt  config.py  latest_model.pt  match_equity.pt
checkpoints_v1/: best_model.pt  config.py  latest_model.pt  match_equity.pt
scripts/: play_desktop.py  play_web.py  train.py  train_vs_baseline.py
src/: config.py  engine.py  mcts.py  model.py  replay_buffer.py  trainer.py  trainer_vs_baseline.py
src/backgammon/: __init__.py  checkpoint.py  config.py  elo.py  engine.py  mcts.py  model.py  replay_buffer.py  trainer.py  trainer_vs_baseline.py  ui_desktop.py  utils.py
src/backgammon/ui_web/: html_ui.html
src/backgammon/utils/: checkpoint.py  cube.py  distribution.py  game.py  history.py  train.py
src/utils/: checkpoint.py  cube.py  elo.py  game.py  history.py  match_equity.py  move.py  train.py
tests/: test.py  test_checkpoint.py  write_table.py
ui/: html_ui.html  ws_server.py
