[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backgammon-ai"
version = "1.0.0"
description = "Neural Network based Backgammon AI with MCTS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Backgammon AI Team"}
]
keywords = ["backgammon", "ai", "mcts", "neural-network", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
web = [
    "websockets>=11.0",
]
desktop = [
    "kivy>=2.2.0",
]
all = [
    "websockets>=11.0",
    "kivy>=2.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bg-train = "backgammon.trainer:train"

[project.urls]
Homepage = "https://github.com/agressive_bg"
Repository = "https://github.com/agressive_bg"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"backgammon.ui_web" = ["*.html"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

